app.css: Fix 'powered by' positioning
  It was too low and vertically cutoff at bottom of page.
  '#' == bottom of page
  "by goa#ccess, ...."

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -34,7 +34,7 @@ h3 {
 	position: absolute;
 }
 .powered {
-	bottom: 170px;
+	bottom: 220px;
 	color: #9E9E9E;
 	font-size: smaller;
 	position: absolute;
